--- a/index.html
+++ b/index.html
@@ -576,6 +576,40 @@
             <use href="./images/icons.svg#icon---18-2-1"></use>
           </svg>
         </button>
+        <strong>Залиште свої дані, ми вам передзвонимо</strong>
+        <form class="modal-form" name="modal_form">
+          <div class="modal-form-group" role="group">
+            <Label class="modal-form-Label" for="user_name">Ім'я</Label>
+            <div class="modal-form-wrapper">
+              <input  class="modal-form-field" type="text" name="user_name" id="user_name"/>
+              <svg class="modal-form-icon" width="18" height="18">
+                <use href="./images/icons.svg#"></use>
+              </svg>
+            </div>
+            <Label class="modal-form-Label" for="user_phone">Телефон</Label>
+            <div class="modal-form-wrapper">
+              <input  class="modal-form-field" type="tel" name="user_phone" id="user_phone"/>
+              <svg class="modal-form-icon" width="18" height="18">
+                <use href="./images/icons.svg#"></use>
+              </svg>
+            </div>
+            <Label class="modal-form-Label" for="user_mail">Пошта</Label>
+            <div class="modal-form-wrapper">
+              <input class="modal-form-field" type="text" name="user_mail" id="user_mail" />
+              <svg class="modal-form-icon" width="18" height="18">
+                <use href="./images/icons.svg#"></use>
+              </svg>
+            </div>
+            <Label class="modal-form-Label" for="user_massage">Коментар</Label>
+            <textarea class="modal-form-massage" name="user_massage" id="user_massage" rows="6">
+            </textarea>
+          </div>
+          <div role="group">
+            <input class="modal-form-checkbox" type="checkbox" id="user_agreement" />
+            <label for="user_agreement">Погоджуюся з розсилкою та приймаю<a href="">Умови договору"</a></label>
+          </div>
+          <button class="modal-form-btn" type="submit">send</button>
+        </form>
       </div>
     </div>
 
