--- a/index.html
+++ b/index.html
@@ -583,21 +583,21 @@
             <div class="modal-form-wrapper">
               <input  class="modal-form-field" type="text" name="user_name" id="user_name"/>
               <svg class="modal-form-icon" width="18" height="18">
-                <use href="./images/icons.svg#"></use>
+                <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
               </svg>
             </div>
             <Label class="modal-form-Label" for="user_phone">Телефон</Label>
             <div class="modal-form-wrapper">
               <input  class="modal-form-field" type="tel" name="user_phone" id="user_phone"/>
               <svg class="modal-form-icon" width="18" height="18">
-                <use href="./images/icons.svg#"></use>
+                <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
               </svg>
             </div>
             <Label class="modal-form-Label" for="user_mail">Пошта</Label>
             <div class="modal-form-wrapper">
               <input class="modal-form-field" type="text" name="user_mail" id="user_mail" />
               <svg class="modal-form-icon" width="18" height="18">
-                <use href="./images/icons.svg#"></use>
+                <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
               </svg>
             </div>
             <Label class="modal-form-Label" for="user_massage">Коментар</Label>
