--- a/index.html
+++ b/index.html
@@ -581,7 +581,7 @@
           <div class="modal-form-group" role="group">
             <Label class="modal-form-Label" for="user_name">Ім'я</Label>
             <div class="modal-form-wrapper">
-              <input  class="modal-form-field" type="text" name="user_name" id="user_name"/>
+              <input  class="modal-form-field" type="text" name="user_name" id="user_name" />
               <svg class="modal-form-icon" width="18" height="18">
                 <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
               </svg>
@@ -595,20 +595,24 @@
             </div>
             <Label class="modal-form-Label" for="user_mail">Пошта</Label>
             <div class="modal-form-wrapper">
-              <input class="modal-form-field" type="text" name="user_mail" id="user_mail" />
+              <input class="modal-form-field" type="email" name="user_mail" id="user_mail" /> 
               <svg class="modal-form-icon" width="18" height="18">
                 <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
               </svg>
+              
             </div>
             <Label class="modal-form-Label" for="user_massage">Коментар</Label>
-            <textarea class="modal-form-massage" name="user_massage" id="user_massage" rows="6">
+            <textarea class="modal-form-massage" name="user_massage" id="user_massage" rows="6" placeholder="Введіть текст"> 
             </textarea>
           </div>
           <div role="group">
             <input class="modal-form-checkbox" type="checkbox" id="user_agreement" />
             <label for="user_agreement">Погоджуюся з розсилкою та приймаю<a href="">Умови договору"</a></label>
           </div>
-          <button class="modal-form-btn" type="submit">send</button>
+          <button class="submit" class="hiro-btn">
+            Відправити
+          </button>
+
         </form>
       </div>
     </div>
