--- a/index.html
+++ b/index.html
@@ -595,14 +595,28 @@
           <div class="modal-form-group" role="group">
             <Label class="modal-form-Label" for="user_name">Ім'я</Label>
             <div class="modal-form-wrapper">
-              <input  class="modal-form-field" type="text" name="user_name" id="user_name" required/>
+              <input  
+                class="modal-form-field" 
+                type="text" 
+                name="user_name" 
+                id="user_name" 
+                required
+                minlength="2"
+                />
               <svg class="modal-form-icon" width="18" height="18">
                 <use href="./images/icons.svg#icon-person-black-18dp-1"></use>
               </svg>
             </div>
             <Label class="modal-form-Label" for="user_phone">Телефон</Label>
             <div class="modal-form-wrapper">
-              <input  class="modal-form-field" type="tel" name="user_phone" id="user_phone"/>
+              <input  
+                class="modal-form-field" 
+                type="tel" 
+                name="user_phone" 
+                id="user_phone"
+                required
+
+                />
               <svg class="modal-form-icon" width="18" height="18">
                 <use href="./images/icons.svg#icon-phone-black-18dp-1"></use>
               </svg>
@@ -616,7 +630,12 @@
               
             </div>
             <Label class="modal-form-Label" for="user_massage">Коментар</Label>
-            <textarea class="modal-form-massage" name="user_massage" id="user_massage" rows="6" placeholder="Введіть текст"> 
+            <textarea 
+              class="modal-form-massage" 
+              name="user_massage"
+              id="user_massage"
+              rows="6" 
+              placeholder="Введіть текст">
             </textarea>
           </div>
           <div role="group">
