--- a/index.html
+++ b/index.html
@@ -634,8 +634,9 @@
               class="modal-form-massage" 
               name="user_massage"
               id="user_massage"
-              rows="6" 
-              placeholder="Введіть текст">
+              rows="6"
+              placeholder="Введіть текст"
+              >
             </textarea>
           </div>
           <div role="group">
