--- a/index.html
+++ b/index.html
@@ -571,8 +571,8 @@
             <input
               class="footer-form-field"
               type="email"
-              name="user_mail"
-              id="user_mail"
+              name="user_footer_mail"
+              id="user_footer_mail"
               placeholder="E-mail"
               required
             />
