--- a/index.html
+++ b/index.html
@@ -566,23 +566,22 @@
           </ul>
         </div>
         <div class="footer-email">
-          <p class="footer-text">ПІДПИШІТЬСЯ НА РОЗСИЛКУ</p>
-          <form class="footer-form" name="footer_form">
+          <p class="footer-text">Підпишіться на розсилку</p>
+          <form class="footer-form">
+            <label for="email"></label>
             <input
               class="footer-form-field"
-              type="email"
-              name="user_footer_mail"
-              id="user_footer_mail"
+              type="text"
+              name="email"
+              id="email"
               placeholder="E-mail"
               required
             />
             <button class="form-btn" type="submit">
-             <div>
-              <p class="form-btn-text">Підписатися</p>
+              Підписатися
               <svg class="icon-teleg" width="24" height="24">
                 <use href="./images/icons.svg#icon-teleg"></use>
               </svg>
-              </div>
             </button>
           </form>
         </div>
