--- a/index.html
+++ b/index.html
@@ -643,13 +643,12 @@
             </div>
             <label class="modal-form-Label" for="user_massage">Коментар</label>
             <textarea
-              class="modal-form-massage"
-              name="user_massage"
-              id="user_massage"
+              class="modal-form-message"
+              name="user_message"
+              id="user_message"
               rows="6"
               placeholder="Введіть текст"
-            >
-            </textarea>
+            ></textarea>
           </div>
           <div class="modal-form-agreement" role="group">
             <input
