--- a/portfolio.html
+++ b/portfolio.html
@@ -317,6 +317,26 @@
             </li>
           </ul>
         </div>
+        <div class="footer-email">
+          <p class="footer-text">Підпишіться на розсилку</p>
+          <form class="footer-form">
+            <label for="email"></label>
+            <input
+              class="footer-form-field"
+              type="text"
+              name="email"
+              id="email"
+              placeholder="E-mail"
+              required
+            />
+            <button class="form-btn" type="submit">
+              Підписатися
+              <svg class="icon-teleg" width="24" height="24">
+                <use href="./images/icons.svg#icon-teleg"></use>
+              </svg>
+            </button>
+          </form>
+        </div>
       </div>
     </footer>
   </body>
