--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
                 <use href="./images/icons.svg#icon-email-black-18dp-1"></use>
               </svg>
             </div>
-            <label class="modal-form-Label" for="user-massage">Коментар</label>
+            <label class="modal-form-Label" for="user_massage">Коментар</label>
             <textarea
               class="modal-form-message"
               name="user_message"
